// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GiftGridItem Component should render the component correctly 1`] = `
<Fragment>
  <h3>
    goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test GiftGridItem Component should show items when useFetchGifs hook return data 1`] = `
<Fragment>
  <h3>
    goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="image_title"
      url="http://localhost/img/test.jpg"
    />
    <GifGridItem
      id="abcd"
      key="abcd"
      title="image_title_2"
      url="http://localhost/img/test_2.jpg"
    />
  </div>
</Fragment>
`;
